- Complete some module with fix the bugs.

--- a/TeliconLatest/TeliconLatest.csproj
+++ b/TeliconLatest/TeliconLatest.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Views\Branch\Index.cshtml" />
+    <None Include="Views\Classification\Index.cshtml" />
     <None Include="Views\Home\Index.cshtml" />
     <None Include="Views\Shared\Error.cshtml" />
     <None Include="Views\Shared\_CustomerLayout.cshtml" />
@@ -42,14 +44,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="EPPlus" Version="5.7.2" />
+    <PackageReference Include="EPPlus" Version="5.7.3" />
     <PackageReference Include="LinqKit.Core" Version="1.1.24" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.7">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.3.1" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.1" />
+    <PackageReference Include="Simple.ImageResizer" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
