--- a/TeliconLatest/appsettings.json
+++ b/TeliconLatest/appsettings.json
@@ -9,8 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"DefaultConnection": "server=72.167.36.41; port=3306; database=telicondb; user=telicondb; password=TRN23100invoice#; Persist Security Info=False; Connect Timeout=3000"
-    "DefaultConnection": "server=103.21.58.6; port=3306; database=telicondb; user=telicondb; password=TRN23100invoice#; Persist Security Info=False; Connect Timeout=3000"
-    //"DefaultConnection": "server=127.0.0.1; port=3306;database=telicondb; user=root; password=#sa123; Persist Security Info=False; Connect Timeout=300"
+    //"DefaultConnection": "server=103.21.58.6; port=3306; database=telicondb; user=telicondb; password=TRN23100invoice#; Persist Security Info=False; Connect Timeout=3000"
+    "DefaultConnection": "server=127.0.0.1; port=3306;database=teliconlatestdb; user=root; password=#sa123; Persist Security Info=False; Connect Timeout=300"
   },
   "mailSettings": {
     "smtp": {
