In Report Controller 3 areas are done (those are uncommented). Fixed the excel license and download issue due to aynch way

--- a/TeliconLatest/TeliconLatest.csproj
+++ b/TeliconLatest/TeliconLatest.csproj
@@ -60,6 +60,7 @@
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.1" />
     <PackageReference Include="Simple.ImageResizer" Version="2.1.0" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.12" />
   </ItemGroup>
 
   <ItemGroup>
