- Add sp changes and fix other issues.

--- a/TeliconLatest/TeliconLatest.csproj
+++ b/TeliconLatest/TeliconLatest.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="DBChanges\SP\" />
     <Folder Include="wwwroot\SignImages\" />
   </ItemGroup>
 
